Revamp index.html with new layout and content

--- a/index.html
+++ b/index.html
@@ -1,9 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="hr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edifex | Građevinska rješenja</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<header class="header">
+    <div class="container nav">
+        <div class="logo">Edifex</div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#home">Početna</a></li>
+                <li><a href="#about">O nama</a></li>
+                <li><a href="#services">Usluge</a></li>
+                <li><a href="#projects">Projekti</a></li>
+                <li><a href="#contact">Kontakt</a></li>
+            </ul>
+        </nav>
+        <div class="hamburger" id="hamburger">
+            ☰
+        </div>
+    </div>
+</header>
 
+<section id="home" class="hero">
+    <div class="container hero-content">
+        <h1>Gradimo Vašu Viziju</h1>
+        <p>Pouzdana građevinska rješenja za stambene i poslovne objekte.</p>
+        <a href="#contact" class="btn">Zatražite ponudu</a>
+    </div>
+</section>
+
+<section id="about" class="section">
+    <div class="container">
+        <h2>O nama</h2>
+        <p>
+            Edifex je građevinska tvrtka specijalizirana za visokogradnju,
+            adaptacije i završne radove. Naš tim stručnjaka osigurava
+            kvalitetu, preciznost i poštivanje rokova.
+        </p>
+    </div>
+</section>
+
+<section id="services" class="section bg-light">
+    <div class="container">
+        <h2>Naše usluge</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Visokogradnja</h3>
+                <p>Izgradnja stambenih i poslovnih objekata po sistemu ključ u ruke.</p>
+            </div>
+            <div class="card">
+                <h3>Adaptacije</h3>
+                <p>Kompletne renovacije stanova, kuća i poslovnih prostora.</p>
+            </div>
+            <div class="card">
+                <h3>Završni radovi</h3>
+                <p>Fasade, keramika, podovi, suha gradnja i ostali završni radovi.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="projects" class="section">
+    <div class="container">
+        <h2>Projekti</h2>
+        <div class="grid">
+            <div class="project-card">Projekt 1</div>
+            <div class="project-card">Projekt 2</div>
+            <div class="project-card">Projekt 3</div>
+        </div>
+    </div>
+</section>
+
+<section id="contact" class="section bg-dark">
+    <div class="container">
+        <h2>Kontakt</h2>
+        <p>Email: info@edifex.hr</p>
+        <p>Telefon: +385 00 000 000</p>
+        <form class="contact-form">
+            <input type="text" placeholder="Ime i prezime" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Poruka" required></textarea>
+            <button type="submit" class="btn">Pošalji</button>
+        </form>
+    </div>
+</section>
+
+<footer class="footer">
+    <div class="container">
+        <p>© 2026 Edifex. Sva prava pridržana.</p>
+    </div>
+</footer>
+
+<script src="index.js"></script>
 </body>
 </html>
