--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container nav">
         <div class="logo">Edifex</div>
         <nav>
-            <ul class="nav-links">
+            <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Početna</a></li>
                 <li><a href="#about">O nama</a></li>
                 <li><a href="#services">Usluge</a></li>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="hamburger" id="hamburger">
-            ☰
+            <span>☰</span>
         </div>
     </div>
 </header>
@@ -69,9 +69,22 @@
     <div class="container">
         <h2>Projekti</h2>
         <div class="grid">
-            <div class="project-card">Projekt 1</div>
-            <div class="project-card">Projekt 2</div>
-            <div class="project-card">Projekt 3</div>
+
+            <div class="project-card">
+                <img src="https://images.unsplash.com/photo-1591618296647-3824fca4468d?q=80&w=1166&auto=format&fit=crop" alt="Projekt slika 1">
+                <div class="overlay">Stambeni objekt A</div>
+            </div>
+
+            <div class="project-card">
+                <img src="https://images.unsplash.com/photo-1527270997612-014349a46e9c?q=80&w=1074&auto=format&fit=crop" alt="Projekt slika 2">
+                <div class="overlay">Poslovni objekt B</div>
+            </div>
+
+            <div class="project-card">
+                <img src="https://images.unsplash.com/photo-1629795892844-3bd09c92b5fa?q=80&w=1170&auto=format&fit=crop" alt="Projekt slika 3">
+                <div class="overlay">Adaptacija C</div>
+            </div>
+
         </div>
     </div>
 </section>
