Update content for Edifex website sections

--- a/index.html
+++ b/index.html
@@ -28,20 +28,25 @@
 
 <section id="home" class="hero">
     <div class="container hero-content">
-        <h1>Gradimo Vašu Viziju</h1>
-        <p>Pouzdana građevinska rješenja za stambene i poslovne objekte.</p>
-        <a href="#contact" class="btn">Zatražite ponudu</a>
+        <h1>Stručna ugradnja krovnih prozora</h1>
+<p>Specijalizirani smo za profesionalnu instalaciju VELUX krovnih prozora, zamjenu postojećih sustava i rješenja za prirodno osvjetljenje potkrovlja.</p>
+<a href="#contact" class="btn">Zatražite besplatnu procjenu</a>
     </div>
 </section>
 
 <section id="about" class="section">
     <div class="container">
         <h2>O nama</h2>
-        <p>
-            Edifex je građevinska tvrtka specijalizirana za visokogradnju,
-            adaptacije i završne radove. Naš tim stručnjaka osigurava
-            kvalitetu, preciznost i poštivanje rokova.
-        </p>
+<p>
+    Edifex je specijalizirani obrt za ugradnju i zamjenu VELUX krovnih prozora.
+    Dugogodišnje iskustvo u radu na kosim krovovima omogućuje nam preciznu,
+    sigurnu i dugotrajnu izvedbu.
+</p>
+<p>
+    Radimo na stambenim objektima, adaptacijama potkrovlja te novogradnji.
+    Svakom projektu pristupamo individualno uz maksimalnu pažnju na detalje,
+    hidroizolaciju i toplinsku učinkovitost.
+</p>
     </div>
 </section>
 
@@ -50,17 +55,19 @@
         <h2>Naše usluge</h2>
         <div class="grid">
             <div class="card">
-                <h3>Visokogradnja</h3>
-                <p>Izgradnja stambenih i poslovnih objekata po sistemu ključ u ruke.</p>
-            </div>
-            <div class="card">
-                <h3>Adaptacije</h3>
-                <p>Kompletne renovacije stanova, kuća i poslovnih prostora.</p>
-            </div>
-            <div class="card">
-                <h3>Završni radovi</h3>
-                <p>Fasade, keramika, podovi, suha gradnja i ostali završni radovi.</p>
-            </div>
+    <h3>Ugradnja VELUX prozora</h3>
+    <p>Profesionalna instalacija svih modela VELUX krovnih prozora uz originalne opšave i izolacijske setove.</p>
+</div>
+
+<div class="card">
+    <h3>Zamjena postojećih prozora</h3>
+    <p>Brza i čista zamjena starih krovnih prozora novim, energetski učinkovitijim modelima.</p>
+</div>
+
+<div class="card">
+    <h3>Dodatna oprema i servis</h3>
+    <p>Ugradnja roleta, sjenila, komarnika te servis i održavanje postojećih sustava.</p>
+</div>
         </div>
     </div>
 </section>
@@ -72,23 +79,41 @@
 
             <div class="project-card">
                 <img src="https://images.unsplash.com/photo-1591618296647-3824fca4468d?q=80&w=1166&auto=format&fit=crop" alt="Projekt slika 1">
-                <div class="overlay">Stambeni objekt A</div>
+                <div class="overlay">Ugradnja VELUX prozora</div>
             </div>
 
             <div class="project-card">
                 <img src="https://images.unsplash.com/photo-1527270997612-014349a46e9c?q=80&w=1074&auto=format&fit=crop" alt="Projekt slika 2">
-                <div class="overlay">Poslovni objekt B</div>
+                <div class="overlay">Adaptacija potkrovlja</div>
             </div>
 
             <div class="project-card">
                 <img src="https://images.unsplash.com/photo-1629795892844-3bd09c92b5fa?q=80&w=1170&auto=format&fit=crop" alt="Projekt slika 3">
-                <div class="overlay">Adaptacija C</div>
+                <div class="overlay">Zamjena starog krovnog prozora</div>
             </div>
 
         </div>
     </div>
 </section>
-
+<section class="section bg-light">
+    <div class="container">
+        <h2>Zašto odabrati Edifex?</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Specijalizacija</h3>
+                <p>Fokusirani smo isključivo na krovne prozore i radove na kosim krovovima.</p>
+            </div>
+            <div class="card">
+                <h3>Preciznost</h3>
+                <p>Ugradnja prema tehničkim standardima proizvođača uz potpunu vodonepropusnost.</p>
+            </div>
+            <div class="card">
+                <h3>Pouzdanost</h3>
+                <p>Poštivanje rokova i čistoća gradilišta nakon završetka radova.</p>
+            </div>
+        </div>
+    </div>
+</section>
 <section id="contact" class="section bg-dark">
     <div class="container">
         <h2>Kontakt</h2>
